--- a/webapp/src/main/webapp/visibleHeader.html
+++ b/webapp/src/main/webapp/visibleHeader.html
@@ -3,13 +3,13 @@
 <!-- Copyright (C) 2007 jointly held by Allyson Lister, Olly Shaw, and their employers.-->
 <!-- To view the full licensing information for this software and ALL other files contained-->
 <!-- in this distribution, please see LICENSE.txt-->
-<!-- $LastChangedDate:$-->
-<!-- $LastChangedRevision:$-->
-<!-- $Author:$-->
-<!-- $HeadURL:$-->
+<!-- $LastChangedDate$-->
+<!-- $LastChangedRevision$-->
+<!-- $Author$-->
+<!-- $HeadURL$-->
 
 <div id="Newcastle"><a href="http://www.ncl.ac.uk"><IMG SRC="pics/newcastle_50l.jpg" ALIGN=absmiddle border="0"></a>
 </div>
 
-<div id="Header"><IMG SRC="pics/lion.jpg" ALIGN=absmiddle>&nbsp;&nbsp;&nbsp;SyMBA (Release 7.08)
+<div id="Header"><IMG SRC="pics/lion.jpg" ALIGN=absmiddle>&nbsp;&nbsp;&nbsp;SyMBA (Release 7.09)
 </div>
