--- a/webapp/src/main/webapp/menu-static.html
+++ b/webapp/src/main/webapp/menu-static.html
@@ -3,14 +3,13 @@
 <!-- Copyright (C) 2007 jointly held by Allyson Lister, Olly Shaw, and their employers.-->
 <!-- To view the full licensing information for this software and ALL other files contained-->
 <!-- in this distribution, please see LICENSE.txt-->
-<!-- $LastChangedDate:$-->
-<!-- $LastChangedRevision:$-->
-<!-- $Author:$-->
-<!-- $HeadURL:$-->
+<!-- $LastChangedDate$-->
+<!-- $LastChangedRevision$-->
+<!-- $Author$-->
+<!-- $HeadURL$-->
 
 <li><a href="home.jsp" title="SyMBA Home Page">&nbsp;SyMBA Home</a></li>
 <li><a href="help.jsp" target="_blank" title="SyMBA Help Page">&nbsp;SyMBA Help</a></li>
-<li><a href="http://http://sourceforge.net/projects/symba" title="SyMBA Project Home Page">&nbsp;SyMBA Project Home</a>
-</li>
+<li><a href="http://symba.sourceforge.net" title="SyMBA Project Home Page">&nbsp;SyMBA Project Home</a></li>
 <li><a href="http://www.cisban.ac.uk/index.html" title="CISBAN Home Page">&nbsp;CISBAN Home</a></li>
 <li><a href="http://www.cisban.ac.uk/contact.html" title="How to get in touch">&nbsp;Contact Us</a></li>
