added additional forms and search screens, and code to handle dummy GPAs

--- a/webapp/src/main/webapp/help.html
+++ b/webapp/src/main/webapp/help.html
@@ -3,10 +3,10 @@
 <!-- Copyright (C) 2007 jointly held by Allyson Lister, Olly Shaw, and their employers.-->
 <!-- To view the full licensing information for this software and ALL other files contained-->
 <!-- in this distribution, please see LICENSE.txt-->
-<!-- $LastChangedDate:$-->
-<!-- $LastChangedRevision:$-->
-<!-- $Author:$-->
-<!-- $HeadURL:$-->
+<!-- $LastChangedDate$-->
+<!-- $LastChangedRevision$-->
+<!-- $Author$-->
+<!-- $HeadURL$-->
 
 <h2>Systems and Molecular Biology Data Archive (SyMBA): Help Page</h2>
 
@@ -39,7 +39,7 @@
     Integrator
     (SyMBA) that is based on the FuGE Object Model (FuGE-OM) and which archives, stores, and retrieves
     raw high-throughput data. Until now, few published systems have successfully integrated multiple omics
-    data types and information about experiments in a single database. SyMBA is the first published
+    investigation detailss and information about experiments in a single database. SyMBA is the first published
     implementation of FuGE that includes a database back-end, expert and standard interfaces, and utilizes a
     Life Science Identifier (LSID) Resolution and Assigning service to identify objects and provide programmatic
     access to the database. Having a central data repository prevents deletion, loss, or accidental modification
@@ -146,11 +146,11 @@
 <p>
     When you are adding data to SyMBA, you will see "Experiment" used as a container for your data files.
     But what is an experiment in the context of SyMBA, and how do your data files relate to it? A SyMBA experiment
-    is an overarching investigation that may contain many data files, of multiple data types. For instance,
+    is an overarching investigation that may contain many data files, of multiple investigation detailss. For instance,
     if you are performing a large-scale experiment that will involve many microarray results as well as colony growth
-    images and 2D-gels, you do not have to create an experiment for each data type. Instead, create just one
-    experiment and add as many data files and data types as required. If you do not see a data type that is correct
-    for you, or the data type does not provide the correct identifying factors for your experiment (e.g. you are using
+    images and 2D-gels, you do not have to create an experiment for each investigation details. Instead, create just one
+    experiment and add as many data files and investigation detailss as required. If you do not see a investigation details that is correct
+    for you, or the investigation details does not provide the correct identifying factors for your experiment (e.g. you are using
     different strains in your experiment than the ones in SyMBA), then please
     <a href="mailto:helpdesk@cisban.ac.uk">contact us</a>.
 </p>
@@ -238,8 +238,8 @@
 <p>
     The deposition of data files is the third step in the process of providing SyMBA with experimental
     information. While you are allowed to deposit as many data files as you like at this stage, each data file must be
-    of the same type (e.g. Microarray). If you have multiple files of different data types, then please go through
-    the data deposition process once per data type. This restriction allows only those experimental processes
+    of the same type (e.g. Microarray). If you have multiple files of different investigation detailss, then please go through
+    the data deposition process once per investigation details. This restriction allows only those experimental processes
     (also known as protocols) to be chosen that are appropriate for the data file during the next stage of the
     submission process. Additionally, all data files deposited at this stage <strong>WILL</strong> be associated
     with the same experiment. Therefore, if you are depositing data files from different experiments, then
@@ -265,7 +265,7 @@
     with experimental information. Each data file is the result of a measurement of one of your experimental
     materials. We need to join together each data file with the exact procedure that was used to generate it.
     On this page is a list of all of the data files you uploaded in the previous page. Each data file name
-    has, next to it, a list of appropriate protocols for the data type. These protocols were created in
+    has, next to it, a list of appropriate protocols for the investigation details. These protocols were created in
     the database with the consultation of the research groups within CISBAN, and are only useful in that context.
     If your protocol is not present, or if you find an error or lack of important information, then please
     <a href="mailto:helpdesk@cisban.ac.uk">contact us</a>.
