RealizableEntityServiceImpl just had some javadoc comments fixed. Added an oldFilename variable to RawDataInfoBean so that the original filename could be displayed throughout the process. Virtually all of the jsps have changed now that we are using the new symba.css, which has fieldsets and various additional css items added to allow grouping of the form sections. will retain cisban.css for a little while, but that will go soon.

--- a/webapp/src/main/webapp/metas.html
+++ b/webapp/src/main/webapp/metas.html
@@ -3,15 +3,15 @@
 <!-- Copyright (C) 2007 jointly held by Allyson Lister, Olly Shaw, and their employers.-->
 <!-- To view the full licensing information for this software and ALL other files contained-->
 <!-- in this distribution, please see LICENSE.txt-->
-<!-- $LastChangedDate:$-->
-<!-- $LastChangedRevision:$-->
-<!-- $Author:$-->
-<!-- $HeadURL:$-->
+<!-- $LastChangedDate$-->
+<!-- $LastChangedRevision$-->
+<!-- $Author$-->
+<!-- $HeadURL$-->
 
 <meta name="keywords"
-      content="Systems Biology, CISBAN, Computational Biology, Ageing, Ageing, Nutrition, Kirkwood, Biological Modelling, Biological Modelling"/>
-<meta name="The CISBAN homepage. CISBAN's aim is to advance understanding of the complex mechanisms underpinning the ageing process and of how these are affected by nutrition, through the field of research known as systems biology."/>
-<link rel="stylesheet" type="text/css" href="cisban.css"/>
+      content="Systems Biology, CISBAN, Computational Biology, FuGE, Metadata, Experiment Design, Data Archive, Metadata Archive"/>
+<meta name="SyMBA: The Systems and Molecular Biology Data and Metadata Archive"/>
+<link rel="stylesheet" type="text/css" href="symba.css"/>
 <title>SyMBA</title>
 
 <script type="text/javascript">
