Cleaned up all webapp code so it shows up green in intellij :) Also refactored some information in the DatafileSpecificMetadataStore, specifically by moving some protocol / action information into the ActionSummary class, as it was getting a bit unwieldy. Also fixed a bug in the multiple <select> boxes so they weren't all getting saved.

--- a/webapp/src/main/webapp/metas.html
+++ b/webapp/src/main/webapp/metas.html
@@ -9,8 +9,7 @@
 <!-- $HeadURL$-->
 
 <meta name="keywords"
-      content="Systems Biology, CISBAN, Computational Biology, FuGE, Metadata, Experiment Design, Data Archive, Metadata Archive"/>
-<meta name="SyMBA: The Systems and Molecular Biology Data and Metadata Archive"/>
+      content="Systems Biology, CISBAN, Computational Biology, FuGE, Metadata, Experiment Design, Data Archive, Metadata Archive, SyMBA: The Systems and Molecular Biology Data and Metadata Archive"/>
 <link rel="stylesheet" type="text/css" href="symba.css"/>
 <title>SyMBA</title>
 
