The external jars that in the past had to be manually copied using 'mvn install-file' as there was no maven repo holding them have now been copied to the CARMEN/CISBAN maven repository, and therefore the build is much simpler. trunk/pom.xml modified to reflect this, and the lib directory removed.
Now that the session is purged after a set of data files are uploaded, we cannot have download.jsp list the session data files. Instead redirect the user to the search pages to get the files. Therefore download.jsp and its associated help section have been updated.

factored out the beans from the webapp directory and made them their own sub-project, so the can be referred to by other sub-projects on their own as a jar, without being bundled directly in the war. These java files were deleted from the webapp dir and put in the webapp-helper subproject. webapp-helper should only contain java classes; jsps etc should still go into webapp.

--- a/webapp/src/main/webapp/help.html
+++ b/webapp/src/main/webapp/help.html
@@ -309,15 +309,12 @@
 
 <p>
     At this stage, your experimental data will have been stored in the archive. Before you continue, please
-    click on the "Download" button to download your file from the database. This is CISBAN policy, though
-    it may seem counter-intuitive. The reason we require that you download your file is so the CISBAN identifier
-    that has been generated for your data file can be automatically attached. It is very important that you
-    keep this CISBAN identifier with its associated data file.
-    For more information on why this is important, please see
-    the section of this help entitled
+    click on the "Download" button to download your file from the database. Some users of SyMBA
+    (e.g. CISBAN) have this as a standard policy. The reason for this is so the "friendly" identifier
+    that has been generated for your data file can be automatically attached. It is important that you
+    know this friendly identifier, and keep it with its associated data file.
+    For more information on friendly identifiers, please see the section of this help entitled
     "<a href="#cisbanIdentifiers">What is the Identifier that Gets Assigned to My Data File?</a>".
-    Clicking on the "Download" button will not only start your download, but also return you to SyMBA
-    home page.
 </p>
 
 <p class="centered">[ <a href="#contents">Help Contents</a> ] :: [ <a href="#intro">Introduction to SyMBA</a> ]</p>
