Carmen experiment works properly now, as well as the mimage experiment. To use, remember to load the ontology terms before loading the full template!
Made some more associations in the UML to lazy loading = false.

Added a status message that you write into the top-level pom, and which will then get displayed in the login page.

The other two sample experiments load, but are not functioning quite right with the interface. I'll be working on those in the next few days.

the viewing of the experiments doesn't yet show all the inforamtion, but that is also in my immediate to-do list. Until i get it all showing, I've removed the ability to copy metadata from the view screen, but it will be put back. 

Once these are fixed, the sandbox will be rebuilt - hopefully next week.

--- a/symba-webapp/src/main/webapp/help.html
+++ b/symba-webapp/src/main/webapp/help.html
@@ -34,6 +34,27 @@
 
 <a name="intro"><h2 class="centered">Introduction to SyMBA</h2></a>
 
+<ol>
+    <li>
+        <table>
+            <tr>
+                <td>pom.xml (Lis_DEF_4564):</td>
+                <td>
+                    <ul>
+
+                        <li>MiMage Real-Time PCR Investigation
+                        <li><input type="radio" name="actionChosen"
+                                   value="urn:lsid:cisban.cisbs.org:GenericProtocol:0d12e43d-2984-4792-8362-c2869941a50e---MiMage Real-Time PCR Investigation---urn:lsid:cisban.cisbs.org:Endurant:0bbd97ec-d5ac-4fe7-9474-6b3209344402---Step Containing the Real-Time PCR Protocol---urn:lsid:cisban.cisbs.org:GenericProtocol:89feec0d-db1f-407c-a243-0f866167af21"
+                                   checked="checked"/>Step Containing the Real-Time PCR Protocol
+                        </li>
+                    </ul>
+                </td>
+            </tr>
+        </table>
+    </li>
+</ol>
+
+
 <p>
     The Centre for Integrated Systems Biology of Ageing and Nutrition (CISBAN) has developed a Data Archive and
     Integrator
@@ -69,29 +90,29 @@
     choose to do a variety of tasks, mainly centred around deposition and modification of data files and experimental
     information. Your choices are:
 </p>
-    <ul>
-        <li>
-            <strong>Deposit some Data.</strong> By following this link, you will be presented with a short series
-            of web pages that prompt you to deposit your data and add a few relevant bits of information about
-            the data file. Any primary data source as described in the CISBAN Data Policy
-            (username and password required) may be loaded into SyMBA. By storing our primary data here, we can
-            help prevent deletion, loss, or accidental modification of primary data, while giving convenient
-            access to the data for publication and analysis. Further, by providing extra information on
-            experimental conditions and protocols can provide useful when either viewing or searching for
-            specific data files, or when using the data files as input in further research projects.
-        </li>
-        <li>
-            <strong>View your saved experiments.</strong> This is a convenient shortcut to the most
-            commonly-used search. This link will take you to a view of all the experiments associated to you.
-        </li>
-        <li>
-            <strong>How to use this site.</strong> A link to this help page.
-        </li>
-        <li>
-            <strong>Update your personal details.</strong> If you want to either view or modify your personal
-            details, then follow this link.
-        </li>
-    </ul>
+<ul>
+    <li>
+        <strong>Deposit some Data.</strong> By following this link, you will be presented with a short series
+        of web pages that prompt you to deposit your data and add a few relevant bits of information about
+        the data file. Any primary data source as described in the CISBAN Data Policy
+        (username and password required) may be loaded into SyMBA. By storing our primary data here, we can
+        help prevent deletion, loss, or accidental modification of primary data, while giving convenient
+        access to the data for publication and analysis. Further, by providing extra information on
+        experimental conditions and protocols can provide useful when either viewing or searching for
+        specific data files, or when using the data files as input in further research projects.
+    </li>
+    <li>
+        <strong>View your saved experiments.</strong> This is a convenient shortcut to the most
+        commonly-used search. This link will take you to a view of all the experiments associated to you.
+    </li>
+    <li>
+        <strong>How to use this site.</strong> A link to this help page.
+    </li>
+    <li>
+        <strong>Update your personal details.</strong> If you want to either view or modify your personal
+        details, then follow this link.
+    </li>
+</ul>
 <p class="centered">[ <a href="#contents">Help Contents</a> ] :: [ <a href="#intro">Introduction to SyMBA</a> ]</p>
 
 <a name="personalData"><h2 class="centered">Viewing and Modifying Your Details</h2></a>
@@ -149,8 +170,10 @@
     is an overarching investigation that may contain many data files, of multiple investigation detailss. For instance,
     if you are performing a large-scale experiment that will involve many microarray results as well as colony growth
     images and 2D-gels, you do not have to create an experiment for each investigation details. Instead, create just one
-    experiment and add as many data files and investigation detailss as required. If you do not see a investigation details that is correct
-    for you, or the investigation details does not provide the correct identifying factors for your experiment (e.g. you are using
+    experiment and add as many data files and investigation detailss as required. If you do not see a investigation
+    details that is correct
+    for you, or the investigation details does not provide the correct identifying factors for your experiment (e.g. you
+    are using
     different strains in your experiment than the ones in SyMBA), then please
     <a href="mailto:helpdesk@cisban.ac.uk">contact us</a>.
 </p>
@@ -238,8 +261,10 @@
 <p>
     The deposition of data files is the third step in the process of providing SyMBA with experimental
     information. While you are allowed to deposit as many data files as you like at this stage, each data file must be
-    of the same type (e.g. Microarray). If you have multiple files of different investigation detailss, then please go through
-    the data deposition process once per investigation details. This restriction allows only those experimental processes
+    of the same type (e.g. Microarray). If you have multiple files of different investigation detailss, then please go
+    through
+    the data deposition process once per investigation details. This restriction allows only those experimental
+    processes
     (also known as protocols) to be chosen that are appropriate for the data file during the next stage of the
     submission process. Additionally, all data files deposited at this stage <strong>WILL</strong> be associated
     with the same experiment. Therefore, if you are depositing data files from different experiments, then
@@ -352,18 +377,18 @@
 <p>
     This identifier is created in the following manner:
 </p>
-    <ol>
-        <li>
-            The first 3 characters are the first three characters of your last name.
-        </li>
-        <li>
-            The next 3 characters (after the first underscore, "_") are a three-letter acronym that stands for
-            the type of data the identifier belongs to. For example, "MCA" means Microarray.
-        </li>
-        <li>
-            The final 4 characters (after the second underscore) are a set of 4 random digits.
-        </li>
-    </ol>
+<ol>
+    <li>
+        The first 3 characters are the first three characters of your last name.
+    </li>
+    <li>
+        The next 3 characters (after the first underscore, "_") are a three-letter acronym that stands for
+        the type of data the identifier belongs to. For example, "MCA" means Microarray.
+    </li>
+    <li>
+        The final 4 characters (after the second underscore) are a set of 4 random digits.
+    </li>
+</ol>
 
 <p class="centered">[ <a href="#contents">Help Contents</a> ] :: [ <a href="#intro">Introduction to SyMBA</a> ]</p>
 
