--- a/symba-webapp/src/net/sourceforge/symba/web/public/index.html
+++ b/symba-webapp/src/net/sourceforge/symba/web/public/index.html
@@ -1,29 +1,34 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
-            "http://www.w3.org/TR/html4/strict.dtd">
+        "http://www.w3.org/TR/html4/strict.dtd">
 
 <html>
-  <head>
+<head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>SyMBA Data and Metadata Archive</title>
-    <script type="text/javascript" language="javascript" src="net.sourceforge.symba.web.InvestigationManipulator.nocache.js"></script>
-  	<style type="text/css">
-  	
-	  	BODY { width: 100%; margin: 5px; }
-	  		    
-	  	.note {
-	  		width: 90%; 
-	  		text-align: center;
-	  		margin: 5px;  
-		  	padding: 5px;
-	  	  	border: 2px dashed #ddd;
-	  	  	background: lightyellow;
-	  	}
 
-  	</style>
-  </head>
+    <!--                                                               -->
+    <!-- Consider inlining CSS to reduce the number of requested files -->
+    <!--                                                               -->
+    <link type="text/css" rel="stylesheet" href="symba.css">
 
-  <body>
+    <!--                                           -->
+    <!-- This script loads your compiled module.   -->
+    <!-- If you add any GWT meta tags, they must   -->
+    <!-- be added before this line.                -->
+    <!--                                           -->
+    <script type="text/javascript" language="javascript"
+            src="net.sourceforge.symba.web.InvestigationManipulator.nocache.js"></script>
 
+</head>
 
-  </body>
+<!--                                           -->
+<!-- The body can have arbitrary html, or      -->
+<!-- you can leave the body empty if you want  -->
+<!-- to create a completely dynamic UI.        -->
+<!--                                           -->
+<body>
+<!-- OPTIONAL: include this if you want history support -->
+<!--<iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1' style="position:absolute;width:0;height:0;border:0"></iframe>-->
+
+</body>
 </html>
