Changed the default width of the images to make the help page more readable.

--- a/symba-webapp/src/main/webapp/MainHelp.html
+++ b/symba-webapp/src/main/webapp/MainHelp.html
@@ -23,7 +23,7 @@
     'help' pages. If the user is not yet logged in, only the links to the welcome and help pages are active.
 </p>
 
-<img src="images/symba-welcome.png" alt="The welcome screen for the SyMBA web application."/>
+<img src="images/symba-welcome.png" width="90%" alt="The welcome screen for the SyMBA web application."/>
 
 <p>
     To the west is the main SyMBA usage panel. Initially, the west panel contains a short summary of SyMBA and a login
@@ -53,7 +53,7 @@
     user to opt out of the add menu and instead view a list of existing investigations. This link works in a way
     identical to the view button from the north panel.
 </p>
-<img src="images/symba-add-new.png"
+<img src="images/symba-add-new.png" width="90%"
      alt="The pop-up window which appears when the 'add' button from the north panel of SyMBA is pressed."/>
 
 <p>
@@ -70,7 +70,7 @@
     view its details or click on the radio button next to its name and then either Copy or Delete the investigation.
     SyMBA can be modified to disable or completely remove the Delete button.
 </p>
-<img src="images/symba-view-investigations.png"
+<img src="images/symba-view-investigations.png" width="90%"
      alt="The summary of investigations stored within SyMBA shown when the view button is pressed."/>
 
 <h2>Templates and Completed Investigations</h2>
@@ -108,7 +108,7 @@
     shown in the image below.
 </p>
 
-<img src="images/symba-set-as-template.png"
+<img src="images/symba-set-as-template.png" width="90%"
      alt="The 'View Existing Investigation' screen in SyMBA. This investigation has had some experimental steps and parameters added in preparation for saving it as a template. The user has selected the 'Set As Template' checkbox. Clicking on 'Save' or 'Save and Finish' will result in this investigation being saved as a new template within SyMBA."/>
 
 <p>
@@ -138,7 +138,8 @@
     Subject-Predicate-Object of RDF triples, RDF is not used within SyMBA.
 </p>
 
-<img src="images/symba-parameter-detail.png" alt="Pop-up window allowing user input of parameters and materials."/>
+<img src="images/symba-parameter-detail.png" width="90%"
+     alt="Pop-up window allowing user input of parameters and materials."/>
 
 <p>
     FuGE parameters have three types: number, boolean and string literal. These types can be manually specified by the
@@ -171,9 +172,9 @@
     pressed, while the image after it shows a partial screenshot of the resulting FuGE-ML.
 </p>
 
-<img src="images/symba-download.png"
+<img src="images/symba-download.png" width="90%"
      alt="The pop-up download menu which appears as a result of pressing the get button in the SyMBA header."/>
 
-<img src="images/symba-fugeml.png"
+<img src="images/symba-fugeml.png" width="90%"
      alt="Example FuGE-ML retrieved when an investigation is selected for retrieval in SyMBA."/>
 
